--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% load static %}
-    <title>{% block title %}YouTube Segment Downloader{% endblock %}</title>
+    <title>{% block title %}YouTube video clip Downloader{% endblock %}</title>
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="{% static 'img/logo.png' %}">
     <!-- Bootstrap 5 CSS -->
